Removed magic strings. Updated gulp script. Added welcome page.

--- a/src/commons/scss/main.scss
+++ b/src/commons/scss/main.scss
@@ -18,3 +18,4 @@
 
 // Import all the other stuff
 @import "../../modules/dashboard/dashboard.scss";
+@import "../../modules/project-list/project-list.scss";
